feat: Add more Api
Add machine Api
Started on booking Api.
Fix coverage info
