# api/controllers/bookings.js
@@ -1,0 +1,26 @@
+/**
+ * Created by budde on 09/06/16.
+ */
+
+function listBookings (req, res) {
+  res.json()
+}
+
+function createBooking (req, res) {
+  res.json()
+}
+
+function fetchBooking (req, res) {
+  res.json()
+}
+
+function deleteBooking (req, res) {
+  res.json()
+}
+
+module.exports = {
+  listBookings: listBookings,
+  createBooking: createBooking,
+  fetchBooking: fetchBooking,
+  deleteBooking: deleteBooking
+}
